# ollamaUsingMcpServer

./: .gitignore  API.py  Documentacion.md  MCPServer.py  README.md  main.py  pyproject.toml
